<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_cover"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:src="@drawable/logo_unity" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_login"
        android:textColor="#18347E"
        android:textSize="20dp"
        android:textStyle="bold" />

    <com.dovantuan.assignment1.custom_textview.oxy
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/txt_login2"
        android:textColor="#2980b9"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/textviewshape"
        android:drawableRight="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/txt_user"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/textviewshape"
        android:drawableRight="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/txt_pass"
        android:inputType="textPassword"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chk_luu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="#2d3436"
        android:text="Ghi nhớ tài khoản"
        android:textColor="#2d3436" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_view"
            android:text="log in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_dki"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_view2"
            android:text="register"
            android:textColor="@color/white" />
    </LinearLayout>


    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="or sign in with"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter" />

    </LinearLayout>

</LinearLayout>